--- a/Cloud services/AWS/S3.md
+++ b/Cloud services/AWS/S3.md
@@ -104,11 +104,29 @@ This allows all origins to get data from the bucket.
 Get the route path the files share. Select a file in the bucket and copy the object URL, drop the specific folder path and image name as well as the protocoll name (https:, http:).
 The path should start with `//`.
 
-When refering to files in S3 from the code, use the route path ( and then the specific foler/file path ) instead of a path to a local folder/file. If the files are already referenced locally,
-this to the S3 route.
+When refering to files in S3 from the code, use the route path ( and then the specific folder/file path ) instead of a path to a local folder/file. If the files are already referenced locally,
+replace these with the S3 route.
+```javascript
+const Sequelize = require('sequelize')
+
+const database = 'pizza_luvers'
+const host = 'pizza-db.cwuqhpnxedwp.eu-north-1.rds.amazonaws.com'
+const username = 'postgres'
+const password = ''
+
+const pgClient = new Sequelize(
+    database,
+    username,
+    password,
+    {
+        host: host,
+        dialect: 'postgres'
+    }
+)
+```
 
 ## Connecting to EC2
-When using localhost it is the AWS user credentials, on an EC2 application IAM roles are used to set credentials. 
+When using localhost it is the AWS user credentials, not an EC2 application IAM role that is used to set credentials. 
 This needs to be done to give the EC2 instance access to S3 buckets and can be set in the launch configurations of the auto scaling group.
 
 EC2 needs to have the code that interacts with S3 instead of a local store. Upload files in the EC2 instance and create a new AIM using these files if needed.\
